@@ -24,6 +24,15 @@ def mapply(func, *args, **kw):
     return func(*args, **new_kw)
 
 
+def lookup_mapply(func, lookup, *args, **kw):
+    """Apply lookup argument to function only if it defines it.
+    """
+    info = arginfo(func)
+    if not info.keywords and 'lookup' in info.args:
+        return func(*args, lookup=lookup, **kw)
+    return func(*args, **kw)
+
+
 def arginfo(callable):
     """Get information about the arguments of a callable.
 
